INTYGFV-16055: Migration to gradle 8 (#796)
Co-authored-by: Mikael Heglind <mikael.heglind@soprasteria.com>